--- a/news.html
+++ b/news.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Newest</title>
+        <title>News</title>
         <meta charset='UTF-8' />
         <meta name='author' content='Goran Djuric and Jelena Matejic' />
         <meta name='description' content='world news website' />
@@ -111,12 +111,12 @@
 <!-- Main Div -->
 
     <div id='wrap_div'>
-        <div id='newest_main_div'>
-            <div class='newest_divs'>
+        <div id='news_main_div'>
+            <div class='news_divs'>
                 <hr class='other_page_hr' />
-                <h2 id='newest_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
-                <p id='newest_p'>
-                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='newest_img' />
+                <h2 id='news_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
+                <p id='news_p'>
+                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='news_img' />
                     <em>L</em>orem ipsum dolor sit, amet consectetur adipisicing elit. Quod harum asperiores por
                     ro voluptate maxime iste est? Nostrum reiciendis doloremque vel perspiciat
                     is. Possimus, veniam laudantium at amet molestias quis doloremque fugiat?
@@ -164,10 +164,10 @@
                 </span>
                 <hr class='other_page_hr' />
             </div>
-            <div class='newest_divs'>
-                <h2 id='newest_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
-                <p id='newest_p'>
-                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='newest_img' />
+            <div class='news_divs'>
+                <h2 id='news_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
+                <p id='news_p'>
+                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='news_img' />
                     <em>L</em>orem ipsum dolor sit, amet consectetur adipisicing elit. Quod harum asperiores por
                     ro voluptate maxime iste est? Nostrum reiciendis doloremque vel perspiciat
                     is. Possimus, veniam laudantium at amet molestias quis doloremque fugiat?
@@ -215,10 +215,10 @@
                 </span>
                 <hr class='other_page_hr' />                
             </div>
-            <div class='newest_divs'>
-                <h2 id='newest_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
-                <p id='newest_p'>
-                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='newest_img' />
+            <div class='news_divs'>
+                <h2 id='news_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
+                <p id='news_p'>
+                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='news_img' />
                     <em>L</em>orem ipsum dolor sit, amet consectetur adipisicing elit. Quod harum asperiores por
                     ro voluptate maxime iste est? Nostrum reiciendis doloremque vel perspiciat
                     is. Possimus, veniam laudantium at amet molestias quis doloremque fugiat?
@@ -265,10 +265,10 @@
                 </span>
                 <hr class='other_page_hr' />                    
             </div>
-            <div class='newest_divs'>
-                <h2 id='newest_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
-                <p id='newest_p'>
-                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='newest_img' />
+            <div class='news_divs'>
+                <h2 id='news_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
+                <p id='news_p'>
+                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='news_img' />
                     <em>L</em>orem ipsum dolor sit, amet consectetur adipisicing elit. Quod harum asperiores por
                     ro voluptate maxime iste est? Nostrum reiciendis doloremque vel perspiciat
                     is. Possimus, veniam laudantium at amet molestias quis doloremque fugiat?
@@ -315,10 +315,10 @@
                 </span>
                 <hr class='other_page_hr' />                    
             </div>
-            <div class='newest_divs'>
-                <h2 id='newest_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
-                <p id='newest_p'>
-                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='newest_img' />
+            <div class='news_divs'>
+                <h2 id='news_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
+                <p id='news_p'>
+                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='news_img' />
                     <em>L</em>orem ipsum dolor sit, amet consectetur adipisicing elit. Quod harum asperiores por
                     ro voluptate maxime iste est? Nostrum reiciendis doloremque vel perspiciat
                     is. Possimus, veniam laudantium at amet molestias quis doloremque fugiat?
@@ -365,10 +365,10 @@
                 </span>
                 <hr class='other_page_hr' />    
             </div>
-            <div class='newest_divs'>
-                <h2 id='newest_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
-                <p id='newest_p'>
-                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='newest_img' />
+            <div class='news_divs'>
+                <h2 id='news_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
+                <p id='news_p'>
+                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='news_img' />
                     <em>L</em>orem ipsum dolor sit, amet consectetur adipisicing elit. Quod harum asperiores por
                     ro voluptate maxime iste est? Nostrum reiciendis doloremque vel perspiciat
                     is. Possimus, veniam laudantium at amet molestias quis doloremque fugiat?
@@ -436,10 +436,10 @@
                 </span>
                 <hr class='other_page_hr' />                    
             </div>
-            <div class='newest_divs'>
-                <h2 id='newest_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
-                <p id='newest_p'>
-                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='newest_img' />
+            <div class='news_divs'>
+                <h2 id='news_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
+                <p id='news_p'>
+                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='news_img' />
                     <em>L</em>orem ipsum dolor sit, amet consectetur adipisicing elit. Quod harum asperiores por
                     ro voluptate maxime iste est? Nostrum reiciendis doloremque vel perspiciat
                     is. Possimus, veniam laudantium at amet molestias quis doloremque fugiat?
@@ -486,9 +486,9 @@
                 </span>
                 <hr class='other_page_hr' />                    
 
-                <h2 id='newest_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
-                <p id='newest_p'>
-                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='newest_img' />
+                <h2 id='news_h2'>Coronavirus: China advises against travel to Wuhan as deaths surge</h2>
+                <p id='news_p'>
+                    <img src='Images/culture_img/culture_other_1.jpg' alt='Not found!' id='news_img' />
                     <em>L</em>orem ipsum dolor sit, amet consectetur adipisicing elit. Quod harum asperiores por
                     ro voluptate maxime iste est? Nostrum reiciendis doloremque vel perspiciat
                     is. Possimus, veniam laudantium at amet molestias quis doloremque fugiat?
@@ -557,6 +557,6 @@
 
 <!--Main JS -->
 
-        <script src='newest.js'></script>
+        <script src='news.js'></script>
     </body>
 </hmtl>
