--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
 				<div id='nav_more'>more news comming soon</div>
 			</span>
 		</span>
-		<span id='logIn'>
+		<i class="fas fa-ellipsis-h menu_bar" id='menu_bar'></i>
+		<span id='logIn' title="This featur is comming soon">
 				Log In
 				<i class="fas fa-user"></i>
 		</span>
-		<span id='nav_search'>
+		<span id='nav_search' title="This featur is comming soon">
 			<input type="text" name='navSearch' placeholder='Search' id='nav_input' />
 		</span>
 	</div>
@@ -107,6 +108,15 @@
 		</span>
 		<span class='section_mini_class'><h3 class='sec_mini_h3' data-sec='6'>Astronomy</h3></span>
 	</div>
+	<span class='main_mini_nav_span_inactive'>
+		<span class='main_mini_nav_span'><a href='index.html'>Home</a></span>
+		<span class='main_mini_nav_span'><a href='#politics'>Politics</a></span>
+		<span class='main_mini_nav_span'><a href='#sports'>Sports</a></span>
+		<span class='main_mini_nav_span'><a href='#technologies'>Technologies</a></span>
+		<span class='main_mini_nav_span'><a href='#music'>Music</a></span>
+		<span class='main_mini_nav_span'><a href='#culture'>Culture</a></span>
+		<span class='main_mini_nav_span'><a href='#astronomy'>Astronomy</a></span>
+	</span>
 
 	<div id='whole_body'>
 
